<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <!-- Profile Heading -->
        <TextView
            android:id="@+id/profile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/user_profile"
            android:textColor="@color/blue_500"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Large" />

        <!-- Patient Unique ID -->
        <TextView
            android:id="@+id/patient_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="18sp"
            android:text="@string/patient_unique_id"
            android:textColor="@color/blue_500"
            app:layout_constraintTop_toBottomOf="@id/profile_label"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/patient_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/enter_the_id"
            android:inputType="number"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@id/patient_id_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Device -->
        <TextView
            android:id="@+id/device_heading_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device"
            android:textSize="18sp"
            android:textColor="@color/blue_500"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/patient_id_input"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/patient_device_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/enter_device_name"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@id/device_heading_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Medication -->
        <TextView
            android:id="@+id/medication_heading_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medication"
            android:textSize="18sp"
            android:textColor="@color/blue_500"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/patient_device_input"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/patient_medication_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/enter_medication_number"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@id/medication_heading_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/patient_medication_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/name_of_prescribed_medication"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@id/patient_medication_number_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Server Address -->
        <TextView
            android:id="@+id/server_heading_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_address"
            android:textSize="18sp"
            android:textColor="@color/blue_500"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/patient_medication_name_input"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/server_address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/enter_server_base_url"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@id/server_heading_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="24dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/server_address_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
